--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.1",
     "morgan": "^1.9.0",
     "react": "^16.2.0",
@@ -26,6 +27,7 @@
     "redux-form": "^7.2.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "request": "^2.83.0",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "dotenv": "^4.0.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
