--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "babel-node": "babel-node --presets es2015,stage-0 --ignore node_modules,public",
     "dev": "nodemon",
+    "start:dev": "webpack-dev-server --config ./webpack/webpack.dev.config",
+    "server": "node server",
     "start": "webpack-dev-server --config ./webpack/webpack.dev.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,6 +36,7 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
