--- a/package.json
+++ b/package.json
@@ -1,56 +1,67 @@
 {
-  "name": "mern-template",
+  "name": "Favor Saver",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
-    "babel-node": "babel-node --presets es2015,stage-0 --ignore node_modules,public",
+    "build": "webpack --mode production",
     "dev": "nodemon",
-    "start:dev": "webpack-dev-server --config ./webpack/webpack.dev.config",
     "server": "node server",
-    "start": "webpack-dev-server --config ./webpack/webpack.dev.config.js",
+    "start": "webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "dotenv": "^6.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.24.3"
+  },
   "dependencies": {
+    "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.18.0",
+    "babel-plugin-react-css-modules": "^5.2.4",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "jwt-simple": "^0.5.1",
-    "material-ui": "^0.20.0",
-    "mongoose": "^5.0.1",
-    "morgan": "^1.9.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "formik": "^1.5.7",
+    "hookrouter": "^1.1.3",
+    "immutable": "^4.0.0-rc.12",
+    "jshint": "^2.10.2",
+    "jwt-simple": "^0.5.6",
+    "material-ui": "^0.20.2",
+    "mongoose": "^5.4.21",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
-    "react-flexbox-grid": "^2.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "6.0.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
-    "request": "^2.83.0",
-    "webpack": "^3.10.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "dotenv": "^4.0.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.3.2"
   }
 }
