--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["react", "env", "es2015", "stage-2"]
+  "plugins": [
+    "react-css-modules",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/transform-runtime"
+  ],
+  "presets": [
+    "@babel/preset-react",
+    "@babel/preset-env",
+  ]
 }
