--- a/package.json
+++ b/package.json
@@ -1,38 +1,14 @@
 {
-  "name": "Favor Saver",
+  "name": "favor-gold",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode production",
-    "dev": "nodemon",
-    "server": "node server",
-    "start": "webpack-dev-server --mode development --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "dotenv": "^6.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-hot-middleware": "^2.24.3"
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "test"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "d": "^1.0.1",
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.3",
     "@babel/runtime": "^7.4.3",
@@ -63,5 +39,42 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
     "styled-components": "^4.3.2"
-  }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "dotenv": "^6.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.24.3"
+  },
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "nodemon",
+    "server": "node server",
+    "start": "webpack-dev-server --mode development --open",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lyndonl3091/favor-gold.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lyndonl3091/favor-gold/issues"
+  },
+  "homepage": "https://github.com/lyndonl3091/favor-gold#readme"
 }
