--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "test": "test"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "d": "^1.0.1",
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.3",
     "@babel/runtime": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-react-css-modules": "^5.2.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "d": "^1.0.1",
     "express": "^4.16.4",
     "formik": "^1.5.7",
     "hookrouter": "^1.1.3",
@@ -31,6 +31,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "16.8.6",
     "react-redux": "6.0.1",
     "react-router-dom": "^4.3.1",
