--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "dotenv": "^6.2.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
