--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^7.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
@@ -64,7 +65,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "nodemon",
+    "dev": "npm-run-all start server",
     "server": "node server",
     "start": "webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
