--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "immutable": "^4.0.0-rc.12",
     "jshint": "^2.10.2",
     "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.15",
     "material-ui": "^0.20.2",
     "mongoose": "^5.4.21",
     "morgan": "^1.9.1",
